# ssc-ridge-classifiers

./: .gitignore  Makefile.am  README  configure.ac  ridge-classarea.1  ridge-classarea.c  ridge-classbayes.1  ridge-classbayes.c
